cmdline import and view of certs, reqs and keys added

--- a/ReqDetail.ui
+++ b/ReqDetail.ui
@@ -11,8 +11,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>572</width>
-            <height>343</height>
+            <width>580</width>
+            <height>405</height>
         </rect>
     </property>
     <property stdset="1">
@@ -972,7 +972,7 @@
                     <class>QPushButton</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>PushButton11</cstring>
+                        <cstring>but_cancel</cstring>
                     </property>
                     <property stdset="1">
                         <name>text</name>
@@ -1004,7 +1004,7 @@
                     <class>QPushButton</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>PushButton10</cstring>
+                        <cstring>but_ok</cstring>
                     </property>
                     <property stdset="1">
                         <name>text</name>
@@ -1017,13 +1017,13 @@
 </widget>
 <connections>
     <connection>
-        <sender>PushButton10</sender>
+        <sender>but_ok</sender>
         <signal>clicked()</signal>
         <receiver>ReqDetail_UI</receiver>
         <slot>accept()</slot>
     </connection>
     <connection>
-        <sender>PushButton11</sender>
+        <sender>but_cancel</sender>
         <signal>clicked()</signal>
         <receiver>ReqDetail_UI</receiver>
         <slot>reject()</slot>
